# versionbump

./: .gitignore  pyproject.toml
versionbump/: __main__.py  pyproject.toml  readme.md
versionbump/versionbump/: __init__.py  __main__.py
versionbump/versionbump.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
