[project]
name = "versionbump"
version = "0.1.2"
description = "CLI tool to create or increment _version.py in any project."
dependencies = [ "toml",]
[[project.authors]]
name = "Jason Conner"

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project.scripts]
versionbump = "versionbump.__main__:main"
